--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,11 @@
 .DS_Store
 .env
 
-yarn-debug.log*
-yarn-error.log*
+# yarn
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
